third_party/move/move-compiler-v2/tests/inline-opaque/retained_mut_capture.verify.exp

Diagnostics:
error: captured variable `x` cannot be modified inside of a lambda
   ┌─ tests/inline-opaque/retained_mut_capture.move:18:23
   │
18 │         call_once(|i| x = x + i spec { ensures x == old(x) + i; });
   │                       ^
